entity_macros/tests/ui/derive/ent/unsupported-field-type-of-mut-reference.stderr
error: &'a T and &'a mut T are not supported as field types
  --> $DIR/unsupported-field-type-of-mut-reference.rs:18:15
   |
18 |     my_field: &'a mut u32,
   |               ^

error[E0277]: the trait bound `&mut u32: Clone` is not satisfied
  --> $DIR/unsupported-field-type-of-mut-reference.rs:18:5
   |
18 |     my_field: &'a mut u32,
   |     ^^^^^^^^^^^^^^^^^^^^^ the trait `Clone` is not implemented for `&mut u32`
   |
   = help: the following implementations were found:
             <u32 as Clone>
   = note: `Clone` is implemented for `&u32`, but not for `&mut u32`
   = note: required by `clone`
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
